--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 
-<style>
+<!-- <style>
 	body{
 		background-image: url("./images/cork-wallet.png");
 	}
-</style>
-<body>
+</style> -->
+<body style="background-image: url('./images/cork-wallet.png')">
 	<div class="container">
 		<div class="jumbotron">
 			<h1 class="text-center"><span class="glyphicon glyphicon-user"></span> Friend Finder</h1>
