--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,6 +5,7 @@
 	<title>Friend Finder</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <!-- <style>
@@ -12,6 +13,7 @@
 		background-image: url("./images/cork-wallet.png");
 	}
 </style> -->
+<!-- <body> -->
 <body style="background-image: url('./images/cork-wallet.png')">
 	<div class="container">
 		<div class="jumbotron">
